# coframe-personalization

./: .gitignore  README.md  README_HARNESS.md  index.html  plot_results.py  pyproject.toml  run_eval.py
data/: atlas.parquet  helios.parquet  meadow.parquet  rotation.parquet  vega.parquet  vega_truth.parquet  zephyr.parquet
engine/: __init__.py  datasets.py  evaluation.py  features.py  policy.py  scoring.py
policies/: __init__.py  example_policy.py
solution/: BEGINNER_RUNBOOK.md  CHAT_TRANSCRIPT.md  CHAT_TRANSCRIPT_FOR_AGENT.md  DELIVERABLES_COVERAGE.md  HANDOFF_SUMMARY.md  VIDEO_SCRIPT.md  __init__.py  arm_sensitivity.py  eb_policy.py  eval_observability.py  feature_demo.py  gbm_policy.py  index.html  lgbm_policy.py  observability.py  policy.py  report.html  research_log.md  submission_checklist.md
solution/results/: summary.json
solution/results/arm_sensitivity/: README.md  leave_one_arm_out_loss.csv  oracle_winner_share.csv  top_second_gap.csv
solution/results/atlas/: best_fixed.jsonl  example.jsonl  feature_demo.jsonl  gbm_tlearner.jsonl  hybrid_eb_gbm.jsonl  hybrid_eb_lgbm.jsonl  lgbm_tlearner.jsonl  my_policy.jsonl  random.jsonl  seg_country.jsonl  seg_eb.jsonl  seg_eb_recency.jsonl
solution/results/eval_observability/: README.md
solution/results/helios/: best_fixed.jsonl  example.jsonl  feature_demo.jsonl  gbm_tlearner.jsonl  hybrid_eb_gbm.jsonl  hybrid_eb_lgbm.jsonl  lgbm_tlearner.jsonl  my_policy.jsonl  random.jsonl  seg_country.jsonl  seg_eb.jsonl  seg_eb_recency.jsonl
solution/results/meadow/: best_fixed.jsonl  example.jsonl  my_policy.jsonl  (+9 more)
(+37 files in other folders)
